# ha-migo-netatmo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml  requirements_dev.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: release.yaml  validate.yaml
config/: configuration.yaml
custom_components/migo_netatmo/: __init__.py  api.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  entity.py  helpers.py  manifest.json  models.py  number.py  select.py  sensor.py  strings.json  switch.py
custom_components/migo_netatmo/translations/: en.json  es.json  fr.json  it.json  ru.json
docs/: API_REFERENCE.md  configuration.md  entities.md  index.md  installation.md  troubleshooting.md
docs/api/: reference.md
docs/development/: architecture.md  contributing.md  testing.md
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_entities.py
