[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-migo-netatmo"
version = "0.1.0"
description = "Home Assistant integration for MiGO Netatmo thermostats"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "tomahoax"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "homeassistant>=2024.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/tomahoax/ha-migo-netatmo"
Documentation = "https://github.com/tomahoax/ha-migo-netatmo"
Repository = "https://github.com/tomahoax/ha-migo-netatmo"
Issues = "https://github.com/tomahoax/ha-migo-netatmo/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value in comparison
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
    "RUF012",   # Mutable class attributes - HA uses this pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.migo_netatmo"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
follow_imports = "silent"
ignore_missing_imports = true
# Relaxed settings for HA integrations
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "homeassistant.*",
    "voluptuous.*",
    "aiohttp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["custom_components/migo_netatmo"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
